Fix: burger button visible allways

--- a/css/styles1.css
+++ b/css/styles1.css
@@ -52,7 +52,7 @@ nav a:hover {
 }
 
 #btn-burger {
-    /*display: none;*/
+    display: none;
     position: fixed;
     top: 20px;
     right: 20px;
